--- a/MacBook/index.html
+++ b/MacBook/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MacBook Air - Tay Clone</title>
+    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
 
 
     <!-- styless -->
@@ -18,8 +19,8 @@
     <p>Velocidade no ar.</p>
 
     <picture>
-        <source srcset="" media= "(max=width:743)">
-        <img src="" alt="dois notebooks finos do McBook Air" srcset="">
+        <source srcset="./src/images/sections/design_hero_static___2x_small" media= "(max=width:743)">
+        <img src="./src/images/sections/hero_static__2x.png" alt="dois notebooks finos do McBook Air" srcset="">
 
     </picture>
     <div>
@@ -60,12 +61,12 @@
 
     <section>
         <h2>design</h2>
-        <p>Leve pelo caminh9o</p>
+        <p>Leve pelo caminho</p>
     </section>
 
     <picture>
-        <source srcset="" media= "(max=width:743)">
-        <img src="" alt="dois notebooks finos do McBook Air parcialmente abertos" srcset="">
+        <source srcset="./src/images/sections/design_hero_static___2x_small.jpg" media= "(max=width:743)">
+        <img src="./src/images/sections/design_hero_static___2x.jpg" alt="dois notebooks finos do McBook Air parcialmente abertos" srcset="">
     </picture>
 
     <section>
@@ -101,15 +102,15 @@ Div>img +enter = <div><img src="" alt=""></div>
 -->
         <div>
             <div>
-                <img src="" alt="">
+                <img src="./src/images/colors/design_side_skyblue.jpg" alt="">
             </div>
 
             <div>
-                <img src="" alt="">
+                <img src="./src/images/colors/design_magsafe_skyblue.jpg" alt="">
             </div>
 
             <div>
-                <img src="" alt="">
+                <img src="./src/images/colors/design_top_skyblue.jpg" alt="">
                 <fieldset>
                     <ul>
                         <li>
@@ -131,6 +132,11 @@ Div>img +enter = <div><img src="" alt=""></div>
                 </fieldset>
             </div>
         </div>
+
+        <p>
+            <em>Nova Cor. Tudo Azul</em>
+            São quatro cores divinas para você escolher. Uma delas é a nova Azul-céu e todos os modelos de MacBook- Air bem com um cabo MagSafe na mesma cor.
+        </p>
 
         <p></p>
     </section>
