--- a/MacBook/index.html
+++ b/MacBook/index.html
@@ -10,13 +10,16 @@
     <!-- styless -->
      <!-- o atalho para incluior comentário é -- ctrl + k + c -->  
       <link rel="stylesheet" href="./vendor/reset.css">
+
+      <link rel="stylesheet" href="./src/styles/main.css"
+
 </head>
 <body>
    <!-- main -->
 
-   <main>
-        <h1>MacBook Air</h1>
-    <p>Velocidade no ar.</p>
+   <main class="main">
+        <h1 class="main_title">MacBook Air</h1>
+    <p class="main_subtitle gradient-text-blue">Velocidade no ar.</p>
 
     <picture>
         <source srcset="./src/images/sections/design_hero_static___2x_small" media= "(max=width:743)">
@@ -61,7 +64,7 @@
 
     <section>
         <h2>design</h2>
-        <p>Leve pelo caminho</p>
+        <p class="gradient-text-blue">Leve pelo caminho</p>
     </section>
 
     <picture>
