--- a/MacBook/index.html
+++ b/MacBook/index.html
@@ -21,20 +21,21 @@
         <h1 class="main_title">MacBook Air</h1>
     <p class="main_subtitle gradient-text-blue">Velocidade no ar.</p>
 
-    <picture>
+    <picture class="main_media">
         <source srcset="./src/images/sections/design_hero_static___2x_small" media= "(max=width:743)">
-        <img src="./src/images/sections/hero_static__2x.png" alt="dois notebooks finos do McBook Air" srcset="">
+        <img class="main_media_image" ssrc="./src/images/sections/hero_static__2x.png" alt="dois notebooks finos do McBook Air" srcset="">
 
     </picture>
-    <div>
-        <p>Feito pela Apple Intelligence</p>
+
+    <div class="main_copy_container">
+        <p class="main_copy_text gradient-text-colorful">Feito pela Apple Intelligence</p>
         <a href="#">
             <button>Ver preços</button> 
         </a>
          <!-- alt + shit + seta para baixo, duplica a linha de código -->
-        <p>A partir de 1.083,25/ mês ou 12.999 </p>
-        <p>Confira em breve, a disponibilidade </p>
-        <p>A Apple Intelligence já está disponível em portugês do Brasil 
+        <p class="main_price">A partir de 1.083,25/ mês ou 12.999 </p>
+        <p class="main_availability">Confira em breve, a disponibilidade </p>
+        <p class="main_lang">A Apple Intelligence já está disponível em portugês do Brasil 
             <sup>
                 <a href="#" aria-label="Nota de Rodapé #1">1</a>
             </sup>
